instance-controller/ingress-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /instance-controller
        pathType: Prefix
        backend:
          service:
            name: web-tier
            port:
              number: 80
